--- a/index.html
+++ b/index.html
@@ -15,23 +15,39 @@
   </style>
 </head>
 <body>
-
+<img src="images/illustration-hero.svg" alt="dancing and listening to music"/>
+  <h1 class="heading">
   Order Summary
+  </h1>
+
+  <p class="info">
 
   You can now listen to millions of songs, audiobooks, and podcasts on any 
   device anywhere you like!
 
-  Annual Plan
-  $59.99/year
+  </p>
 
-  Change
+  <div>
+  <ul>
+<li><img src="images/icon-music.svg" alt="music icon"/></li>
+<li> <p>Annual Plan
+  $59.99/year</p></li>
+<li>  Change</li>
 
-  Proceed to Payment
-  Cancel Order
+
+  </ul>
+
+ <div>
+  <button>  Proceed to Payment</button>
+  <button> Cancel Order</button>
   
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
+ </div>
+</div>
+
+
+
+ 
+  
+  
 </body>
 </html>
