--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
+  <link rel="stylesheet" href="styles.css">
+  <link rel="preconnect" href="https://fonts.google.com/specimen/Red+Hat+Display">
   <title>Frontend Mentor | Order summary card</title>
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
@@ -15,6 +16,7 @@
   </style>
 </head>
 <body>
+  <div class="card">
 <img src="images/illustration-hero.svg" alt="dancing and listening to music"/>
   <h1 class="heading">
   Order Summary
@@ -28,7 +30,7 @@
   </p>
 
   <div>
-  <ul>
+  <ul class="plan">
 <li><img src="images/icon-music.svg" alt="music icon"/></li>
 <li> <p>Annual Plan
   $59.99/year</p></li>
@@ -37,13 +39,13 @@
 
   </ul>
 
- <div>
-  <button>  Proceed to Payment</button>
-  <button> Cancel Order</button>
+ <div class="options">
+  <button class="pay"> Proceed to Payment</button>
+  <button class="cancel"> Cancel Order</button>
   
  </div>
 </div>
-
+</div>
 
 
  
