--- a/index.html
+++ b/index.html
@@ -22,19 +22,20 @@
   Order Summary
   </h1>
 
-  <p class="info">
+  <div class="infoContainer">
 
+    <p class="info">
   You can now listen to millions of songs, audiobooks, and podcasts on any 
   device anywhere you like!
-
-  </p>
+</p>
+  </div>
 
   <div>
   <ul class="plan">
 <li><img src="images/icon-music.svg" alt="music icon"/></li>
-<li> <p>Annual Plan
-  $59.99/year</p></li>
-<li>  Change</li>
+<li> <div class="planList"> <p>Annual Plan </p>
+  <p>$59.99/year </p></div></li>
+<li class="change">  Change</li>
 
 
   </ul>
