Updates to styling
Added box shadow and setup correct fonts and styles for the rest of the text.

--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
   <div>
   <ul class="plan">
 <li><img src="images/icon-music.svg" alt="music icon"/></li>
-<li> <div class="planList"> <p>Annual Plan </p>
-  <p>$59.99/year </p></div></li>
+<li> <div class="planList"> <p class="planName">Annual Plan </p>
+  <p class="price">$59.99/year </p></div></li>
 <li class="change">  Change</li>
 
 
