--- a/index.html
+++ b/index.html
@@ -1,56 +1,55 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- displays site properly based on user's device -->
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  <link rel="stylesheet" href="styles.css">
-  <link rel="preconnect" href="https://fonts.google.com/specimen/Red+Hat+Display">
-  <title>Frontend Mentor | Order summary card</title>
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./images/favicon-32x32.png"
+    />
+    <link rel="stylesheet" href="styles.css" />
+    <link
+      rel="preconnect"
+      href="https://fonts.google.com/specimen/Red+Hat+Display"
+    />
+    <title>Order summary card</title>
+  </head>
+  <body>
+    <div class="card">
+      <img
+        src="images/illustration-hero.svg"
+        alt="dancing and listening to music"
+      />
+      <h1 class="heading">Order Summary</h1>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
-</head>
-<body>
-  <div class="card">
-<img src="images/illustration-hero.svg" alt="dancing and listening to music"/>
-  <h1 class="heading">
-  Order Summary
-  </h1>
+      <div class="infoContainer">
+        <p class="info">
+          You can now listen to millions of songs, audiobooks, and podcasts on
+          any device anywhere you like!
+        </p>
+      </div>
 
-  <div class="infoContainer">
+      <div>
+        <ul class="plan">
+          <li><img src="images/icon-music.svg" alt="music icon" /></li>
+          <li>
+            <div class="planList">
+              <p class="planName">Annual Plan</p>
+              <p class="price">$59.99/year</p>
+            </div>
+          </li>
+          <li class="change">Change</li>
+        </ul>
 
-    <p class="info">
-  You can now listen to millions of songs, audiobooks, and podcasts on any 
-  device anywhere you like!
-</p>
-  </div>
-
-  <div>
-  <ul class="plan">
-<li><img src="images/icon-music.svg" alt="music icon"/></li>
-<li> <div class="planList"> <p class="planName">Annual Plan </p>
-  <p class="price">$59.99/year </p></div></li>
-<li class="change">  Change</li>
-
-
-  </ul>
-
- <div class="options">
-  <button class="pay"> Proceed to Payment</button>
-  <button class="cancel"> Cancel Order</button>
-  
- </div>
-</div>
-</div>
-
-
- 
-  
-  
-</body>
+        <div class="options">
+          <button class="pay">Proceed to Payment</button>
+          <button class="cancel">Cancel Order</button>
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
