Updates for mobile styling

--- a/index.html
+++ b/index.html
@@ -20,10 +20,12 @@
   </head>
   <body>
     <div class="card">
-      <img
+      <img class="desktopImg"
         src="images/illustration-hero.svg"
         alt="dancing and listening to music"
       />
+      <img class="mobileImg" src="images/illustration-hero.svg"
+      alt="dancing and listening to music" width="310px" />
       <h1 class="heading">Order Summary</h1>
 
       <div class="infoContainer">
