--- a/index.html
+++ b/index.html
@@ -19,13 +19,14 @@
     <title>Order summary card</title>
   </head>
   <body>
+    <main>
     <div class="card">
       <img class="desktopImg"
         src="images/illustration-hero.svg"
         alt="dancing and listening to music"
       />
       <img class="mobileImg" src="images/illustration-hero.svg"
-      alt="dancing and listening to music" width="310px" />
+      alt="dancing and listening to music" width="310" />
       <h1 class="heading">Order Summary</h1>
 
       <div class="infoContainer">
@@ -53,5 +54,6 @@
         </div>
       </div>
     </div>
+  </main>
   </body>
 </html>
